--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,18 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+@layer base {
+  html {
+    @apply scroll-smooth;
+  }
+}
+
 @layer components {
   .btn-social {
     @apply flex h-[53px] w-[53px] items-center justify-center rounded-lg bg-bg-2 text-secondary-400 shadow-1 transition-all
         duration-300 hover:-translate-y-1 hover:bg-bg-3 hover:text-white;
   }
   .title {
-    @apply mb-10 text-center font-secondary text-[34px] font-bold capitalize;
+    @apply mb-10 text-center font-secondary text-[34px] font-bold capitalize lg:text-[60px];
   }
 }
